# Topology-of-Inferred-Gut-Microbial-Metabolic-Capacity-in-Inflammatory-Bowel-Disease

./: .gitignore  Abundance Based Benchmarks for non-IBD vs UC and non-IBD vs CD  Abundance Based Benchmarks for the 3 way task and UC vs CD  Abundance based benchmarks for IBD vs non-IBD  CITATION.cff  Clustering  Edge Concentration Diagnostics  Edge Reuse diagnostic  H_0 alpha learning classifier  LICENSE  MANIFEST.sha256  MANUSCRIPT_RUN.md  Persistent Diagram Vector Builder  README.md  Rerouting Attack on Minimax Paths  Ricci Classifier  Ricci vector builder  Shortest Paths  Weighted Digraph Builder  aggregate_only.py  install_core_patch.py  launch_tmux.sh  prepare_github_repo.sh  pyproject.toml  requirements.txt  ricci_all_tasks.py  run_all_tasks.py  self_test.py  show_ibd_results.py  show_results.py  species_benchmarks_all_tasks.py  status.sh  validate_inputs.py
